# K-COMP

./: .gitignore  LICENSE  README.md  environment.yml  inference.py  pyproject.toml  requirements.txt  train.py
code/: inference.py  train.py
code/data_process/: 0_extract_entity.py  1_gpt_batch_summary.py  3_short_desc.py  README.md
code/retrieval/: 0_generate_passage_embeddings.py  1_passage_retrieval.py
code/src/: data.py  dist_utils.py  index.py  options.py
data_processing/: README.md  extract_entity.py  extract_short_desc.py  mask_questions.py  preprocess_wiki.py  tag_entities.py
legacy_code/: make_dataset.py  multi_process-ner_tag.py  multi_process_decoder.py  pubmed.py
retrieval/: generate_embeddings.py  retrieve_passages.py
script/: 0_retrieval.sh  1_data_process.sh  2_train.sh  3_inference.sh
scripts/: run_data_process.sh  run_inference.sh  run_retrieval.sh  run_train.sh
src/: data.py  index.py  slurm.py  util.py
